styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Noto+Sans:wght@200&display=swap');


@tailwind base;
@tailwind components;
@tailwind utilities;

* {
    @apply selection:bg-uranianBlue;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;
}

.monoFont {
    @apply font-mono !important;
}

body {
    font-family: Comfortaa, serif;
    @apply dark:bg-gray-900;
}

.noSelectionOrDrag {
    user-drag: none;
    -webkit-user-drag: none;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

img {
    @apply noSelectionOrDrag;
}

.PhoneInputInput:focus {
    outline: none;
}

